# RK

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
_build/: AbstractFactory  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
tests/: test_abstract_factory.cpp
